# scomatic_rust

./: .gitignore  Cargo.toml  README.md
src/: base_cell_counter.rs  lib.rs  split_bam_cell_types.rs  util.rs
