[package]
name = "SComatic_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
polars-lazy = { version = "0.36.2", features = ["regex"] }
polars = { version = "0.36.2", features = ["lazy", "csv", "ipc", "strings"] }
rust-htslib = "0.44.1"
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"

[lib]
name = "scomatic"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/split_bam_cell_types.rs"
