[package]
name = "SComatic_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.56"
polars-lazy = { version = "0.36.2", features = ["regex"] }
polars = { version = "0.36.2", features = ["lazy", "csv", "ipc", "strings"] }
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
bedrs = "0.1.11"
noodles = { version = "0.60.0", features = ["bed", "core"] }

# fetch_seq_len not released
# rust-htslib = "0.44.1"
rust-htslib = { git = "https://github.com/rust-bio/rust-htslib.git", branch = "master" }

[lib]
name = "scomatic"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/base_cell_counter.rs"
